--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,7 @@ main {
     padding: 4rem;
     // height: 100%;
     min-height: calc(100vh - 60px);
+
     .icons {
         margin-top: 1rem;
         font-size: 38px;
@@ -120,6 +121,7 @@ main {
     display: grid;
     grid-gap: 0.7rem;
     grid-template-columns: repeat(3, 1fr);
+
     img {
         width: 100%;
         border: 3px #ffffff solid;
@@ -132,12 +134,41 @@ main {
     }
 }
 
+// Contact Page
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px #ffffff solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+
+            span {
+                color: set-text-color($secondary-color);
+            }
+
+        }
+    }
+}
+
 // Button styles
 .btn {
     display: block;
     padding: 0.5rem 1rem;
     border: 0;
     margin: 0.3rem;
+
     &:hover {
         background: $secondary-color;
         color: set-text-color($secondary-color);
@@ -155,6 +186,7 @@ main {
     background: lighten($primary-color, 50);
     color: #333333;
 }
+
 footer {
     text-align: center;
     padding: 1rem;
