--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -23,7 +23,7 @@
 
             // line 1 rotate
             &:nth-child(1) {
-                background: red;
+                background: rgb(82, 85, 228);
                 transform: rotate(45deg) translate(5px, 5px);
             }
 
@@ -34,7 +34,7 @@
 
             // line 3 rotate
             &:nth-child(3) {
-                background: red;
+                background: rgb(82, 85, 228);
                 transform: rotate(-45deg) translate(7px, -6px);
             }
         }
@@ -89,9 +89,9 @@
         }
 
         .portrait {
-        width: 250px;
-        height: 250px;
-        background: url('../img/portrait.jpg');
+        width: 300px;
+        height: 300px;
+        background: url('../img/small.jpg');
         border-radius: 50%;
         border: solid 3px $secondary-color;
         }
