--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,7 @@ h3 {
     &.sm-heading {
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        background: rgba(lighten($primary-color, 2),0.1);
     }
 }
 
@@ -87,6 +87,8 @@ main {
 
     .bio-image {
         grid-area: bioimage;
+        width: 400px;
+        height: 400px;
         margin: auto;
         border-radius: 50%;
         border: $secondary-color 3px solid;
@@ -124,6 +126,7 @@ main {
 
     img {
         width: 100%;
+        height: 250px;
         border: 3px #ffffff solid;
 
         &:hover {
