--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444;
+$primary-color: gray;
 $secondary-color: rgb(82, 85, 228);
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
