--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: gray;
-$secondary-color: rgb(82, 85, 228);
+$primary-color: rgb(91, 142, 187);
+$secondary-color: rgb(34, 36, 167);
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.7;
